--- a/nextjs/.gitignore
+++ b/nextjs/.gitignore
@@ -38,6 +38,7 @@ amplify/mock-data
 amplify/mock-api-resources
 amplify/backend/amplify-meta.json
 amplify/backend/.temp
+amplify/team-provider-info.json
 build/
 dist/
 node_modules/
