--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "styled-components": "5.3.11",
     "terser-webpack-plugin": "5.3.9",
     "tributejs": "^5.1.3",
-    "web3-utils": "^4.0.5",
+    "web3": "^4.1.2",
     "webpack": "5.88.2",
     "webpack-assets-manifest": "5.1.0",
     "webpack-cli": "5.1.4",
