--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -139,7 +139,8 @@ default: &default
   zendesk_access_token: <%= ENV["ZENDESK_ACCESS_TOKEN"] %>
   zendesk_publisher_group_id: <%= ENV["ZENDESK_PUBLISHER_GROUP_ID"] %>
   zendesk_admin_email: <%= ENV["ZENDESK_ADMIN_EMAIL"] %>
-
+  #Next JS proxy
+  next_proxy_url: <%= ENV["NEXT_PROXY_URL"] %>
 development:
   <<: *default
   active_promo_id: "free-bats-2018q1"
