--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -45,7 +45,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "express": "^4.18.2",
     "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
