--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -139,7 +139,9 @@ default: &default
   zendesk_access_token: <%= ENV["ZENDESK_ACCESS_TOKEN"] %>
   zendesk_publisher_group_id: <%= ENV["ZENDESK_PUBLISHER_GROUP_ID"] %>
   zendesk_admin_email: <%= ENV["ZENDESK_ADMIN_EMAIL"] %>
-
+  #Next JS proxy
+  next_proxy_url: <%= ENV["NEXT_PROXY_URL"] %>
+  next_proxy_port: <%= ENV["NEXT_PROXY_PORT"] %>
 development:
   <<: *default
   active_promo_id: "free-bats-2018q1"
@@ -241,6 +243,9 @@ test:
   # AWS for pcdn
   s3_rewards_public_domain: "https://TESTDOMAIN.com"
   api_rewards_base_uri: "https://api.rewards.brave.com"
+  #Next JS proxy
+  next_proxy_url: http://www.example.com
+  next_proxy_port:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
