Rename nextjs enabled var

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -142,7 +142,7 @@ default: &default
   #Next JS proxy
   next_proxy_url: <%= ENV["NEXT_PROXY_URL"] %>
   next_proxy_port: <%= ENV["NEXT_PROXY_PORT"] %>
-  next_proxy_enabled: <%= ENV["NEXT_JS_ENABLED"] %>
+  next_proxy_enabled: <%= ENV["NEXT_PROXY_ENABLED"] %>
 development:
   <<: *default
   active_promo_id: "free-bats-2018q1"
