--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -159,13 +159,13 @@ alice_default_twitter:
   publisher: default
   details: uphold_connected_twitter_default (TwitterChannelDetails)
   verified: true
-  public_identifier: 'c6587d7de522444595e2'
+  public_identifier: 'S8baxMJnPl'
 
 alice_default_twitter_ii:
   publisher: default
   details: uphold_connected_twitter_default_ii (TwitterChannelDetails)
   verified: true
-  public_identifier: 'fd04faddd96bdd3b9840'
+  public_identifier: 'aOxAg8BAJe'
 
 youtube_initial:
   publisher: youtube_initial
