--- a/package.json
+++ b/package.json
@@ -144,6 +144,8 @@
   },
   "resolutions": {
     "node-fetch": "3.3.2",
+    "nth-check": "2.1.1",
+    "postcss": "8.4.33",
     "@types/react": "16.14.46",
     "@types/styled-components": "5.1.26"
   },
