--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -41,6 +41,7 @@
   },
   "resolutions": {
     "nth-check": "2.1.1",
+    "postcss": "8.4.33",
     "word-wrap": "aashutoshrathi/word-wrap"
   }
 }
