--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -31,7 +31,16 @@ RUN yarn install --frozen-lockfile
 # Copy application code
 COPY . .
 
+# Now compile the homepage
 RUN cd public/creators-landing && yarn install && yarn build
+
+# Now for the NextJS frontend
+WORKDIR /rails/nextjs
+RUN npm i
+ENV NEXT_TELEMETRY_DISABLED 1
+RUN npm run build
+
+WORKDIR /rails
 
 # Entrypoint prepares database and starts app on 0.0.0.0:3000 by default,
 # but can also take a rails command, like "console" or "runner" to start instead.
