--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,11 @@ services:
       - "3000:3000"
     env_file: .env.docker.dev
   next:
-    build: nextjs/.
-    command: npm run dev
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    entrypoint: ./scripts/entrypoint-nextjs.sh
+    command: sh -c "cd nextjs && npm run dev"
     volumes:
       - /app/node_modules # <-- try adding this!
       - type: bind
