--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,7 +18,10 @@
     "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
-    "@brave/leo": "github:brave/leo#80f2230bcfb7d2a87e7025a4e26c502d900fd938",
+    "@brave/leo": "github:brave/leo#7a097a503f96b835ae12aad1365ef41bdd78335b",
+    "@fontsource/poppins": "5.0.12",
+    "@fontsource/inter": "5.0.17",
+    "@fontsource/dm-mono": "5.0.19",
     "@github/webauthn-json": "^2.1.1",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
@@ -28,7 +31,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
-    "express-basic-auth": "1.2.1"
+    "express-basic-auth": "1.2.1",
+    "bs58": "5.0.0",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
