Add an OFAC api for banned addresses

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -70,6 +70,8 @@ default: &default
   # e.g. #devops-bot
   slack_channel_diagnostic: <%= ENV["SLACK_CHANNEL_DIAGNOSTIC"] %>
   slack_webhook_url: <%= ENV["SLACK_WEBHOOK_URL"] %>
+  # For access to Github API
+  api_auth_token_github: <%= ENV["API_AUTH_TOKEN_GITHUB"] %>
   # e.g. publishers.brave.com
   url_host: <%= ENV["URL_HOST"] %>
   uphold_authorization_endpoint: <%= ENV["UPHOLD_AUTHORIZATION_ENDPOINT"] %>
