security.yml: add gh_to_slack_user_map: GH_TO_SLACK_USER_MAP

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,3 +24,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           slack_token: ${{ secrets.HOTSPOTS_SLACK_TOKEN }}
           codeql_config: ./.github/codeql/codeql-config.yml
+          gh_to_slack_user_map: ${{ secrets.GH_TO_SLACK_USER_MAP }}
