--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -27,7 +27,8 @@
     "next-intl": "^3.0.0-beta.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "express-basic-auth": "1.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
