--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,6 +12,7 @@
 
 default: &default
   creators_host: <%= ENV["CREATORS_HOST"] %>
+  creators_full_host: <%= ENV["CREATORS_FULL_HOST"] %>
   admin_ip_whitelist: <%= ENV["ADMIN_IP_WHITELIST"] %>
   active_record_encryption_primary_key:  <%= ENV["ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY"] %>
   active_record_encryption_key_derivation_salt:  <%= ENV["ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT"] %>
