Use the FULL host for U2F since the base_url is different now that ra… (#4387)
* Use the FULL host for U2F since the base_url is different now that rails is on a new URL

* Add value for test

* Update follow-redirects

* Ignore for creators landing page, it's in webpack dev server

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,6 +12,7 @@
 
 default: &default
   creators_host: <%= ENV["CREATORS_HOST"] %>
+  creators_full_host: <%= ENV["CREATORS_FULL_HOST"] %>
   admin_ip_whitelist: <%= ENV["ADMIN_IP_WHITELIST"] %>
   active_record_encryption_primary_key:  <%= ENV["ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY"] %>
   active_record_encryption_key_derivation_salt:  <%= ENV["ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT"] %>
@@ -185,6 +186,7 @@ development:
 test:
   <<: *default
   creators_host: "http://creatorshosttest.com/"
+  creators_full_host: "http://creatorshosttest.com/"
   admin_ip_whitelist: "127.0.0.1"
   api_promo_base_uri: "" # http://127.0.0.1:8194
   active_promo_id: "free-bats-2018q1"
