Update tests after redirect changes

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -181,8 +181,8 @@ development:
 
 test:
   <<: *default
-  creators_host: "http://creatorshosttest.com/"
-  creators_full_host: "http://creatorshosttest.com/"
+  creators_host: "http://localhost"
+  creators_full_host: "http://localhost"
   admin_ip_whitelist: "127.0.0.1"
   api_promo_base_uri: "" # http://127.0.0.1:8194
   active_promo_id: "free-bats-2018q1"
