--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -142,10 +142,6 @@ default: &default
   zendesk_access_token: <%= ENV["ZENDESK_ACCESS_TOKEN"] %>
   zendesk_publisher_group_id: <%= ENV["ZENDESK_PUBLISHER_GROUP_ID"] %>
   zendesk_admin_email: <%= ENV["ZENDESK_ADMIN_EMAIL"] %>
-  #Next JS proxy
-  next_proxy_url: <%= ENV["NEXT_PROXY_URL"] %>
-  next_proxy_port: <%= ENV["NEXT_PROXY_PORT"] %>
-  next_proxy_enabled: <%= ENV["NEXT_PROXY_ENABLED"] %>
 development:
   <<: *default
   active_promo_id: "free-bats-2018q1"
@@ -185,8 +181,8 @@ development:
 
 test:
   <<: *default
-  creators_host: "http://creatorshosttest.com/"
-  creators_full_host: "http://creatorshosttest.com/"
+  creators_host: "http://localhost"
+  creators_full_host: "http://localhost"
   admin_ip_whitelist: "127.0.0.1"
   api_promo_base_uri: "" # http://127.0.0.1:8194
   active_promo_id: "free-bats-2018q1"
