--- a/package.json
+++ b/package.json
@@ -96,15 +96,15 @@
     "terser-webpack-plugin": "5.3.9",
     "tributejs": "^5.1.3",
     "web3": "^4.1.2",
-    "webpack": "5.88.2",
-    "webpack-assets-manifest": "5.1.0",
+    "webpack": "5.91.0",
+    "webpack-assets-manifest": "5.2.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "5.9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-react": "^7.24.1",
     "@rails/webpacker": "^5.4.4",
     "@types/jest": "^29.5.3",
     "@types/react": "^16.4.7",
@@ -142,6 +142,7 @@
     "typescript": "^5.1.6"
   },
   "resolutions": {
+    "@babel/traverse": "7.24.1",
     "node-fetch": "3.3.2",
     "nth-check": "2.1.1",
     "postcss": "8.4.33",
