--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@rails/activestorage": "^7.0.6",
     "@rails/ujs": "^7.0.6",
     "@solana/spl-token": "^0.3.8",
-    "@solana/web3.js": "^1.78.4",
+    "@solana/web3.js": "^1.91.4",
     "axios": "1.6.7",
     "babel-loader": "9.1.3",
     "brave-ui": "git+https://github.com/brave/brave-ui#11019732ef5fc09a75bae371c3f3ffece651d97c",
@@ -72,6 +72,7 @@
     "chart.js": "4.4.0",
     "clipboard": "^2.0.11",
     "compression-webpack-plugin": "10",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "dompurify": "^3.0.5",
@@ -147,7 +148,8 @@
     "nth-check": "2.1.1",
     "postcss": "8.4.33",
     "@types/react": "16.14.46",
-    "@types/styled-components": "5.1.26"
+    "@types/styled-components": "5.1.26",
+    "tar": "6.2.1"
   },
   "browserslist": [
     "defaults"
