--- a/package.json
+++ b/package.json
@@ -143,7 +143,7 @@
     "typescript": "^5.1.6"
   },
   "resolutions": {
-    "@babel/traverse": "7.24.1",
+    "**/@babel/traverse": "7.24.1",
     "node-fetch": "3.3.2",
     "nth-check": "2.1.1",
     "postcss": "8.4.33",
