--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "shakapacker": "7.2.2",
+    "stream": "^0.0.2",
     "style-loader": "^3.3.3",
     "styled-components": "5.3.11",
     "terser-webpack-plugin": "5.3.9",
@@ -143,7 +144,7 @@
     "typescript": "^5.1.6"
   },
   "resolutions": {
-    "@babel/traverse": "7.24.1",
+    "**/@babel/traverse": "7.24.1",
     "node-fetch": "3.3.2",
     "nth-check": "2.1.1",
     "postcss": "8.4.33",
