Update OFAC script to use new token

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -73,6 +73,7 @@ default: &default
   slack_webhook_url: <%= ENV["SLACK_WEBHOOK_URL"] %>
   # For access to Github API
   api_auth_token_github: <%= ENV["API_AUTH_TOKEN_GITHUB"] %>
+  github_ofac_token: <%= ENV["API_AUTH_TOKEN_GITHUB_OFAC"] %>
   # e.g. publishers.brave.com
   url_host: <%= ENV["URL_HOST"] %>
   uphold_authorization_endpoint: <%= ENV["UPHOLD_AUTHORIZATION_ENDPOINT"] %>
