add usdc options

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,4 +72,5 @@ jobs:
         run: USE_MINITEST_RETRY=1 NODE_OPTIONS=--openssl-legacy-provider RAILS_ENV=test bundle exec rails test
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
+          BAT_RATIOS_URL: https://ratios.rewards.bravesoftware.com
 
