--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -235,8 +235,8 @@ test:
   sendgrid_publishers_list_id: 3986776
   slack_webhook_url: false
   # Ratios, also needed for VCR tests
-  # bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
-  # bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
+  bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
+  bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
   # Bitflyer env variables
   bitflyer_host: "https://localhost/bitflyertest"
   bitflyer_client_id: "client_id_abc123"
