--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "shakapacker": "7.2.2",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
     "styled-components": "5.3.11",
     "terser-webpack-plugin": "5.3.9",
@@ -106,7 +107,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-react": "^7.24.1",
-    "@rails/webpacker": "^5.4.4",
     "@types/jest": "^29.5.3",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
