--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "webpack-assets-manifest": "5.2.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "5.9"
+    "webpack-merge": "5.9",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-class-properties": "^7.24.1",
@@ -113,7 +114,6 @@
     "@types/styled-components": "^5.1.26",
     "audit-ci": "6.6.1",
     "autoprefixer": "10.4.19",
-    "babel-core": "7.0.0-bridge.0",
     "babel-plugin-styled-components": "2.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
