--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "shakapacker": "7.2.2",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
     "styled-components": "5.3.11",
     "terser-webpack-plugin": "5.3.9",
@@ -101,42 +102,42 @@
     "webpack-assets-manifest": "5.2.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "5.9"
+    "webpack-merge": "5.9",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-class-properties": "^7.24.1",
     "@babel/preset-react": "^7.24.1",
-    "@rails/webpacker": "^5.4.4",
     "@types/jest": "^29.5.3",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "@types/styled-components": "^5.1.26",
     "audit-ci": "6.6.1",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "10.4.19",
     "babel-plugin-styled-components": "2.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "cssnano": "6.0.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.7",
+    "enzyme-adapter-react-16": "^1.15.8",
     "enzyme-to-json": "^3.6.2",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "husky": "^8.0.3",
-    "jest-styled-components": "^7.1.1",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "husky": "^9.0.11",
+    "jest-styled-components": "^7.2",
     "node-sass": "9.0.0",
-    "postcss": "8.4.31",
-    "prettier": "3.0.1",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
     "stylelint": "^15.10.2",
     "stylelint-config-recommended-scss": "12.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-scss": "5.0.1",
     "sugarss": "^4.0.1",
-    "ts-loader": "9.4.4",
+    "ts-loader": "9.5.1",
     "tslint": "6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "9.0",
     "tslint-react": "5.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   },
   "resolutions": {
     "**/@babel/traverse": "7.24.1",
