--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -24,7 +24,7 @@
     "clsx": "^2.0.0",
     "moment": "^2.29.4",
     "next": "^14.1.1",
-    "next-intl": "^3.0.0-beta.9",
+    "next-intl": "3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
