--- a/test/fixtures/gemini_connections.yml
+++ b/test/fixtures/gemini_connections.yml
@@ -2,16 +2,19 @@ default_connection:
   publisher: default
   recipient_id: <%= SecureRandom.uuid %>
   country: 'US'
+  display_name: 'ABC'
 
 suspended_gemini_connection:
   publisher: gemini_suspended
   recipient_id: <%= SecureRandom.uuid %>
   country: 'US'
+  display_name: 'ABC'
 
 gemini_in_japan_connection:
   publisher: gemini_in_japan
   recipient_id: <%= SecureRandom.uuid %>
   country: 'JP'
+  display_name: 'ABC'
 
 connection_with_token:
   publisher: gemini_completed
@@ -21,6 +24,7 @@ connection_with_token:
   refresh_token:  "{\"p\":\"nKVnnT7dnfh6MysCXg==\",\"h\":{\"iv\":\"VTxYzYeIoQQ9gam6\",\"at\":\"jD+1aWJ6I2XIj/hHQRuh0A==\"}}"
   country: 'US'
   status: 'Active'
+  display_name: 'ABC'
 
 connection_not_verified:
   publisher: gemini_not_completed
@@ -28,6 +32,7 @@ connection_not_verified:
   status: 'Active'
   access_token:  "{\"p\":\"LnFCHdkg+hTCtajq\",\"h\":{\"iv\":\"bSij/D78+VQ1T06v\",\"at\":\"eSl/fGA7bB9EpY1XjpZLvg==\"}}"
   refresh_token:  "{\"p\":\"nKVnnT7dnfh6MysCXg==\",\"h\":{\"iv\":\"VTxYzYeIoQQ9gam6\",\"at\":\"jD+1aWJ6I2XIj/hHQRuh0A==\"}}"
+  display_name: 'ABC'
 
 top_referrer_gemini_connected:
   publisher: top_referrer_gemini
@@ -43,3 +48,4 @@ gemini_blocked_country_connection:
   is_verified: true
   recipient_id: <%= SecureRandom.uuid %>
   country: 'AQ'
+  display_name: 'ABC'
