--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -43,6 +43,7 @@ verified_connection:
   uphold_verified: true
   address: "abcdabcd-0000-0000-0000-abcd00000002"
   country: 'US'
+  uphold_id: <%= SecureRandom.uuid %>
 
 verified_blocked_country_connection:
   publisher: verified_blocked_country
@@ -51,6 +52,7 @@ verified_blocked_country_connection:
   uphold_verified: true
   address: <%= SecureRandom.uuid %>
   country: 'VN'
+  uphold_id: <%= SecureRandom.uuid %>
 
 verified_blocked_country_exemption_connection:
   publisher: verified_with_blocked_country_exception
@@ -59,11 +61,13 @@ verified_blocked_country_exemption_connection:
   uphold_verified: true
   address: <%= SecureRandom.uuid %>
   country: 'DJ'
+  uphold_id: <%= SecureRandom.uuid %>
 
 default_connection:
   created_at: 2019-01-01
   publisher: default
   address: "abcdabcd-0000-0000-0000-abcd00000003"
+  uphold_id: <%= SecureRandom.uuid %>
 
 unprompted_connection:
   created_at: 2019-01-01
