add reverted dashboard changes back after rebasing from staging

--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,9 +18,12 @@
     "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
-    "@brave/leo": "github:brave/leo#895c0a25d197ed0567ddf3ebbd0c8a01fa02fc83",
+    "@brave/leo": "github:brave/leo#adc1619dedc076b3f810be5b91a041f8d45f4476",
+    "@fontsource/poppins": "5.0.12",
+    "@fontsource/inter": "5.0.17",
+    "@fontsource/dm-mono": "5.0.19",
     "@github/webauthn-json": "^2.1.1",
-    "axios": "^1.6.0",
+    "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "moment": "^2.29.4",
     "next": "^14.1.1",
@@ -28,7 +31,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
-    "express-basic-auth": "1.2.1"
+    "express-basic-auth": "1.2.1",
+    "bs58": "5.0.0",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
