--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,12 +18,14 @@
     "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
-    "@brave/leo": "github:brave/leo#84b3117d0fd10eb45d94e816fba87909124e7bb1",
+    "@brave/leo": "github:brave/leo#63e98a1bb14cf87dcb8cbd4436e9e38615840447",
     "@fontsource/poppins": "5.0.12",
     "@fontsource/inter": "5.0.17",
     "@fontsource/dm-mono": "5.0.19",
     "@github/webauthn-json": "^2.1.1",
     "axios": "1.7.4",
+    "@solana/spl-token": "^0.4.8",
+    "@solana/web3.js": "^1.95.2",
     "clsx": "^2.0.0",
     "moment": "^2.29.4",
     "next": "^14.1.1",
@@ -33,7 +35,9 @@
     "react-responsive": "^9.0.2",
     "express-basic-auth": "1.2.1",
     "bs58": "5.0.0",
-    "react-select": "^5.7.4"
+    "react-select": "^5.7.4",
+    "qr-code-styling": "^1.6.0-rc.1",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
@@ -71,7 +75,7 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-webpack-plugin": "^4.1.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.4"
+    "typescript": "^5.5.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
