--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -65,6 +65,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
+    "selfsigned": "^2.4.1",
     "stylelint": "^15.10.2",
     "stylelint-config-clean-order": "^5.0.1",
     "stylelint-config-standard": "^34.0.0",
