--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,10 +35,6 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3.1
-      - name: Setup firefox
-        uses: browser-actions/setup-firefox@0f622aed2a492183149a5a5c347205a593802e10 # v1.3.0
-        with:
-          firefox-version: "latest-esr"
       - name: Bundle install
         run: |
           bundle config path vendor/bundle
@@ -64,12 +60,20 @@ jobs:
         run: cd public/creators-landing && yarn install && yarn build 
         env: 
           process.env.CI : false
+      - name: NewUI install
+        run: cd nextjs && npm install
+        env:
+          process.env.CI: false
+      - name: NewUI build
+        run: cd nextjs && node scripts/copyLeoIcons.js && npm run build
+        env:
+          process.env.CI: false
       - name: Prepare database
         run: PREPARING_DATABASE=1 RAILS_ENV=test bundle exec rails db:prepare
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
       - name: Run tests
-        run: USE_MINITEST_RETRY=1 NODE_OPTIONS=--openssl-legacy-provider RAILS_ENV=test bundle exec rails test
+        run: USE_MINITEST_RETRY=1 NODE_OPTIONS=--openssl-legacy-provider RAILS_ENV=test ./bin/run_tests.sh
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
           BAT_RATIOS_URL: https://ratios.rewards.bravesoftware.com
