--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -23,7 +23,7 @@
     "@fontsource/inter": "5.0.17",
     "@fontsource/dm-mono": "5.0.19",
     "@github/webauthn-json": "^2.1.1",
-    "axios": "^1.6.8",
+    "axios": "1.7.4",
     "clsx": "^2.0.0",
     "moment": "^2.29.4",
     "next": "^14.1.1",
