--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -11,13 +11,14 @@
     "react-dom-confetti": "^0.2.0",
     "react-intl": "^6.6.5",
     "react-router-dom": "^6.23.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/helper-call-delegate": "^7.12.13",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "prettier": "3.2.5",
-    "react-scripts": "5.0.1"
+    "rollup": "^3.29.5"
   },
   "scripts": {
     "start": "react-scripts start",
