--- a/package.json
+++ b/package.json
@@ -97,13 +97,14 @@
     "styled-components": "5.3.11",
     "terser-webpack-plugin": "5.3.9",
     "tributejs": "^5.1.3",
+    "vm-browserify": "^1.1.2",
     "web3": "^4.8.0",
     "webpack": "5.94.0",
     "webpack-assets-manifest": "5.2.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "5.9",
-    "vm-browserify": "^1.1.2"
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/plugin-transform-class-properties": "^7.24.1",
