--- a/package.json
+++ b/package.json
@@ -103,8 +103,7 @@
     "webpack-assets-manifest": "5.2.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "5.9",
-    "yarn": "^1.22.22"
+    "webpack-merge": "5.9"
   },
   "devDependencies": {
     "@babel/plugin-transform-class-properties": "^7.24.1",
